@@ -1,3 +1,9 @@
+2009-02-27  Martin Leidig  <mleidig@schlund.de>
+
+	* src/org/pustefixframework/http/AbstractPustefixRequestHandler.java:
+	Log warning if no processor, page or forward is defined for throwable
+	and avoid ClassCastException.
+
 2009-02-25  Martin Leidig  <mleidig@schlund.de>
 
 	* src/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java:
